--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^13.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "video.js": "^7.21.5",
-    "videojs-contrib-hls": "^5.15.0"
+    "axios": "^1.5.0",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
+
